--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: A workflow for my Hello world file
+name: A workflow for my Hello World file
 on: push
 
 jobs:
@@ -10,3 +10,4 @@ jobs:
       - uses: ./action-a
         with:
           MY_NAME: "Mona"
+
