--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -1,6 +1,6 @@
 FROM DEBIAN:9.5-silm
 
-ADD entrypoint.sh/entrypointsh
+ADD entrypoint.sh/entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
-ENTRYPOINT ["/entrypoint.sh"]
+
